Fix overflow in pdp side wrap

--- a/app/assets/stylesheets/redesign/pages/pdp/_pdp.scss
+++ b/app/assets/stylesheets/redesign/pages/pdp/_pdp.scss
@@ -78,7 +78,6 @@
 
   .panel-side-wrap {
     position: relative;
-    overflow: hidden;
   }
 
   .affix-bottom {
